--- a/templates/child_gifts.html
+++ b/templates/child_gifts.html
@@ -96,7 +96,7 @@
     <div class="empty-state">
         <div class="empty-icon">🎁</div>
         <h2>Zatiaľ Žiadne Darceky</h2>
-        <p>Zoznam darčekov tohto dieťaťa je prázdny</p>
+        <p>Zoznam darčekov tohto člena rodiny je prázdny</p>
     </div>
 {% endif %}
 
