--- a/templates/base.html
+++ b/templates/base.html
@@ -13,14 +13,9 @@
             <a href="{{ url_for('family_dashboard') }}" class="nav-brand">🎁 Rodinný Zoznam Darčekov</a>
             <div class="nav-links">
                 {% if session.family_id %}
-                    <a href="{{ url_for('family_dashboard') }}" class="nav-link nav-button">Zoznamy Darčekov</a>
-                    {% if session.admin_id %}
-                        <a href="{{ url_for('admin_dashboard') }}" class="nav-link nav-button admin-button">Správa</a>
-                    {% endif %}
+                    <a href="{{ url_for('family_dashboard') }}" class="nav-link nav-button wishlist-button">Zoznamy Darčekov</a>
+                    <a href="{{ url_for('admin_dashboard') }}" class="nav-link nav-button admin-button">Správa</a>
                     <a href="{{ url_for('family_logout') }}" class="nav-link nav-button logout-button">Odhlásiť sa</a>
-                {% endif %}
-                {% if not session.admin_id %}
-                    <a href="{{ url_for('admin_login') }}" class="nav-link nav-button admin-button">Prihlásiť sa ako Správca</a>
                 {% endif %}
             </div>
         </div>
